<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="200dp"
  android:layout_marginTop="5dp"
  android:layout_marginBottom="5dp"
  android:layout_marginLeft="15dp"
  android:layout_marginRight="15dp"
  card_view:cardCornerRadius="4dp">
  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
      android:id="@+id/textView15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/card_title_analysis"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:text="@string/label_average_done_per_day"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView15"/>
    <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:text="@string/label_average_done_per_week"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:text="@string/label_total_work_done"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="21dp"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:text="@string/label_total_milestones_achieved"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:text="@string/label_total_goals_achieved"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:text="@string/label_most_productive_day"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
      android:id="@+id/average_done_per_day"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:text="@string/placeholder_analysis_value"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView15"/>
    <TextView
      android:id="@+id/average_done_per_week"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:text="@string/placeholder_analysis_value"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/average_done_per_day"/>
    <TextView
      android:id="@+id/total_work_done"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:text="@string/placeholder_analysis_value"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/average_done_per_week"/>
    <TextView
      android:id="@+id/total_milestone_achieved"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:text="@string/placeholder_analysis_value"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/total_work_done"/>
    <TextView
      android:id="@+id/total_goals_achieved"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:text="@string/placeholder_analysis_value"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/total_milestone_achieved"/>
    <TextView
      android:id="@+id/most_productive_day"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:text="@string/placeholder_analysis_value"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/total_goals_achieved"/>
  </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>