<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  android:id="@+id/achieved_goal_card"
  android:layout_width="match_parent"
  android:layout_height="125dp"
  android:layout_marginTop="5dp"
  android:layout_marginBottom="5dp"
  android:layout_marginLeft="15dp"
  android:layout_marginRight="15dp"
  android:layout_gravity="center"
  card_view:cardCornerRadius="4dp">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/goal_card_text"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="8dp"
      android:ellipsize="end"
      android:text="@string/goal_description_placeholder"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      card_view:layout_constraintBottom_toTopOf="@+id/duration_text"
      card_view:layout_constraintEnd_toEndOf="parent"
      card_view:layout_constraintStart_toEndOf="@+id/badge_icon"
      card_view:layout_constraintTop_toTopOf="parent"/>

    <TextView
      android:id="@+id/duration_text"
      android:textStyle="italic"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/duration_placeholder"
      card_view:layout_constraintBottom_toBottomOf="parent"
      card_view:layout_constraintEnd_toEndOf="parent"
      card_view:layout_constraintHorizontal_bias="0.0"
      card_view:layout_constraintStart_toStartOf="parent"/>
    <ImageView
      android:id="@+id/badge_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="24dp"
      android:contentDescription="@string/achievement_badge"
      card_view:layout_constraintBottom_toTopOf="@+id/duration_text"
      card_view:layout_constraintStart_toStartOf="parent"
      card_view:layout_constraintTop_toTopOf="parent"
      card_view:layout_constraintVertical_bias="0.256"
      card_view:srcCompat="@drawable/ic_seal_40dp"
      android:layout_marginLeft="24dp"/>
    <TextView
      android:id="@+id/achieved_milestone_work_count"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/achieved_milestone_work_placeholder"
      card_view:layout_constraintEnd_toEndOf="@+id/badge_icon"
      card_view:layout_constraintStart_toStartOf="@+id/badge_icon"
      card_view:layout_constraintTop_toBottomOf="@+id/badge_icon"/>

  </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>