<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.djacoronel.goalmentum.presentation.ui.activities.MilestoneActivity">
  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:clickable="true"
    android:focusable="true"
    card_view:layout_constraintBottom_toBottomOf="parent"
    card_view:layout_constraintEnd_toEndOf="parent"
    card_view:srcCompat="@drawable/ic_add_black_24dp"/>
  <Space
    android:id="@+id/space"
    android:layout_width="16dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    card_view:layout_constraintStart_toStartOf="parent"
    card_view:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/expanded_milestone_card_text"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:gravity="center_vertical"
    android:minLines="2"
    android:text="@string/milestone_description_placeholder"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    card_view:layout_constraintEnd_toStartOf="@+id/work_count"
    card_view:layout_constraintStart_toEndOf="@+id/expanded_achieved_icon"
    card_view:layout_constraintTop_toTopOf="parent"/>
  <ImageView
    android:id="@+id/expanded_achieved_icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="19dp"
    android:contentDescription="@string/achieved_icon"
    android:visibility="gone"
    card_view:layout_constraintStart_toEndOf="@+id/space"
    card_view:layout_constraintTop_toTopOf="parent"
    card_view:srcCompat="@drawable/ic_check_black_24dp"/>
  <ImageView
    android:id="@+id/expand_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:contentDescription="@string/collapse_milestone_card"
    android:scaleType="centerCrop"
    card_view:layout_constraintEnd_toEndOf="parent"
    card_view:layout_constraintTop_toTopOf="parent"
    card_view:srcCompat="@drawable/ic_expand_more_black_40dp"/>
  <TextView
    android:id="@+id/work_count"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/placeholder_work_count"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    card_view:layout_constraintBottom_toBottomOf="@+id/expand_button"
    card_view:layout_constraintEnd_toStartOf="@+id/expand_button"
    card_view:layout_constraintTop_toTopOf="@+id/expand_button"/>
  <android.support.v7.widget.RecyclerView
    android:id="@+id/work_recycler"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:paddingTop="1dp"
    android:paddingBottom="80dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:clipToPadding="false"
    card_view:layout_constraintBottom_toBottomOf="parent"
    card_view:layout_constraintEnd_toEndOf="parent"
    card_view:layout_constraintStart_toStartOf="parent"
    card_view:layout_constraintTop_toBottomOf="@+id/expanded_milestone_card_text"/>
  <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_work_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone"
    card_view:cardBackgroundColor="@color/colorPrimary"
    card_view:cardCornerRadius="0dp"
    card_view:layout_constraintBottom_toBottomOf="parent"
    card_view:layout_constraintEnd_toEndOf="parent"
    card_view:layout_constraintStart_toStartOf="parent">
    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="0dp">
      <com.djacoronel.goalmentum.util.CustomEditText
        android:id="@+id/input_work_edittext"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:hint="@string/add_a_new_task"
        android:inputType="text"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toStartOf="@+id/add_task_button"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"/>
      <ImageView
        android:id="@+id/add_task_button"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/add_task"
        android:scaleType="center"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:srcCompat="@drawable/ic_arrow_upward_black_24dp"/>
    </android.support.constraint.ConstraintLayout>
  </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
