<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:background="@android:color/background_light"
  android:layout_height="wrap_content"
  android:padding="0dp"
  android:animateLayoutChanges="true"
  tools:layout_editor_absoluteX="0dp"
  tools:layout_editor_absoluteY="0dp">

  <Space
    android:id="@+id/space"
    android:layout_width="16dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    card_view:layout_constraintStart_toStartOf="parent"
    card_view:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/milestone_card_text"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:gravity="center_vertical"
    android:minLines="2"
    android:text="@string/milestone_description_placeholder"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    card_view:layout_constraintBottom_toTopOf="@+id/cardView"
    card_view:layout_constraintEnd_toStartOf="@+id/work_count"
    card_view:layout_constraintStart_toEndOf="@+id/achieved_icon"
    card_view:layout_constraintTop_toTopOf="parent"/>

  <ImageView
    android:id="@+id/achieved_icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="19dp"
    android:contentDescription="@string/achieved_icon"
    android:visibility="visible"
    card_view:layout_constraintStart_toEndOf="@+id/space"
    card_view:layout_constraintTop_toTopOf="parent"
    card_view:srcCompat="@drawable/ic_check_black_24dp"/>

  <ImageView
    android:id="@+id/item_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="19dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:contentDescription="@string/collapse_milestone_card"
    android:scaleType="centerCrop"
    card_view:layout_constraintEnd_toEndOf="parent"
    card_view:layout_constraintTop_toTopOf="parent"
    card_view:srcCompat="@drawable/ic_more_vert_black_24dp"/>

  <android.support.v7.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    card_view:cardCornerRadius="0dp"
    card_view:layout_constraintBottom_toBottomOf="parent"
    card_view:layout_constraintEnd_toEndOf="parent"
    card_view:layout_constraintStart_toStartOf="parent"
    card_view:layout_constraintTop_toBottomOf="@id/milestone_card_text">

    <include
      android:id="@+id/placeholder"
      layout="@layout/empty_work_item"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="visible"/>

    <android.support.v7.widget.RecyclerView
      android:id="@+id/work_recycler"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  </android.support.v7.widget.CardView>

  <TextView
    android:id="@+id/work_count"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:text="@string/work_count_placeholder"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    card_view:layout_constraintBottom_toBottomOf="@+id/item_menu"
    card_view:layout_constraintEnd_toStartOf="@+id/item_menu"
    card_view:layout_constraintTop_toTopOf="@+id/item_menu"/>

</android.support.constraint.ConstraintLayout>