<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.djacoronel.goalmentum.presentation.ui.activities.AddWorkActivity">


  <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/milestone_card"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="0dp"
    card_view:layout_constraintBottom_toTopOf="@+id/input_milestone_card"
    card_view:layout_constraintEnd_toEndOf="parent"
    card_view:layout_constraintStart_toStartOf="parent"
    card_view:layout_constraintTop_toTopOf="parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <TextView
        android:id="@+id/expanded_milestone_card_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:minLines="2"
        android:text="@string/milestone_description_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

      <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        card_view:cardCornerRadius="4dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/expanded_milestone_card_text">

        <android.support.v7.widget.RecyclerView
          android:id="@+id/work_recycler"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      </android.support.v7.widget.CardView>


    </LinearLayout>
  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_milestone_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="0dp"
    card_view:layout_constraintBottom_toBottomOf="parent"
    card_view:layout_constraintEnd_toEndOf="parent"
    card_view:layout_constraintStart_toStartOf="parent">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="0dp">

      <com.djacoronel.goalmentum.presentation.ui.activities.CustomEditText
        android:id="@+id/input_item_text"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_margin="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:hint="@string/add_target_milestone_work_hint"
        android:inputType="text"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toStartOf="@+id/add_item_button"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"/>

      <ImageView
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/add_entry"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:srcCompat="@drawable/ic_add_black_30dp"/>

    </android.support.constraint.ConstraintLayout>
  </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
